[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Obstacles/WoodenSpikes.png" type="Texture" id=1]
[ext_resource path="res://HUD/BuildingButtons.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "hidebuildings"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WoodSpikesButton:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "showbuildings"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WoodSpikesButton:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ) ]
}

[node name="BuildingButtons" type="Node2D"]
position = Vector2( 456, 16 )
z_index = -1
script = ExtResource( 2 )

[node name="WoodSpikesButton" type="TextureButton" parent="."]
margin_right = 34.0
margin_bottom = 34.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hidebuildings = SubResource( 1 )
anims/showbuildings = SubResource( 2 )
[connection signal="mouse_entered" from="WoodSpikesButton" to="." method="_on_WoodSpikesButton_mouse_entered"]
[connection signal="mouse_exited" from="WoodSpikesButton" to="." method="_on_WoodSpikesButton_mouse_exited"]
[connection signal="pressed" from="WoodSpikesButton" to="." method="_on_WoodSpikesButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
